# PikaPython

./: .gitignore  .gitmodules  LICENSE
.github/: ISSUE_TEMPLATE.md
.github/workflows/: CI.yml  TEST.yml  codeql.yml  leaf_ci.yml
package/modbus_rt/: _modbus_rt_tcp.c
package/mqtt/: _mqtt__MQTT.c
package/random/: _random.pyi  random.py
package/socket/: _socket.c
port/linux/benchmark/: CMakeLists.txt
port/linux/boot/banchmark/: CMakeLists.txt
port/linux/boot/demo01-led/: CMakeLists.txt
port/linux/boot/demo02-add/: CMakeLists.txt
port/linux/boot/demo03-usart/: CMakeLists.txt
port/linux/boot/demo04-usarts/: CMakeLists.txt
port/linux/boot/demo05-sysobject/: CMakeLists.txt
port/linux/boot/demo06-pikamain/: CMakeLists.txt
port/linux/package/pikascript/: CMakeLists.txt  _requests.pyi
port/linux/package/pikascript/pikascript-lib/mqtt/: _mqtt__MQTT.c
port/linux/performance/: CMakeLists.txt
port/linux/test/: CMakeLists.txt
src/: CMakeLists.txt  PikaCompiler.c  PikaObj.c  PikaObj.h  PikaParser.c  PikaParser.h  PikaPlatform.h  PikaVM.c  PikaVM.h  __instruction_template.h
src/lib/: leaf_lib.c  leaf_lib.h
src/object/: builtin.c  builtin.h  gc.c  gc.h  history.c  history.h  obj_class.h  obj_data.h  obj_event.c  obj_event.h  obj_new.c  object.c  object.h
src/object/class/: obj_class.c  obj_method.c
src/object/data/: obj_dict.c  obj_list.c  obj_tuple.c
src/parser/: ast.c  ast.h  cursor.c  cursor.h  lexer.c  lexer.h  parser.c  parser.h  token.c  token.h
src/vm/: bc_frame.c  bc_frame.h  const_pool.c  const_pool.h  frame.c  frame.h  inst.c  inst.h  inst_proc.h  vm.c  vm.h  vm_event.c  vm_event.h  vm_frame.c  vm_frame.h  vm_gil.c  vm_gil.h
src/vm/inst/: inst_common.c  inst_common.h  inst_dct.c  inst_def_cls.c  inst_del.c  inst_glb.c  inst_imp.c  inst_inh.c  inst_jez_jnz.c  inst_lst.c  inst_new.c  inst_nls.c  inst_num.c  inst_opt.c  inst_out.c  inst_proc.c  inst_process.c  inst_ras.c  inst_ref.c  inst_ris_ass.c  inst_run.c  inst_slc.c  inst_tpl.c
test/: Readme.md
test/benchmark/: mem_test.py  perf_test.py  run_benchmark.sh
test/hlt/: result.txt  run_cpy_file_test.py  run_cpy_repl_test.py  run_file_test.py  run_repl_test.py  run_test.py  run_test.sh  run_test_common.py  test_object.py
test/hlt/test_case/Control_flow_test/: result_cpy_file_mode.txt  result_file_mode.txt  result_repl_mode.txt  test_control_flow.py
test/hlt/test_case/basic_test/: result.txt  result_cpy_file_mode.txt  result_file_mode.txt  result_repl_mode.txt  testcase.py
test/hlt/test_case/comparison_test/: result_cpy_file_mode.txt  result_file_mode.txt  result_repl_mode.txt  test_comparison.py
(+48 files in other folders)
